--- a/Data06.ipynb
+++ b/Data06.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-15T02:43:01.465597Z",
-     "start_time": "2025-08-15T02:42:59.231542Z"
+     "end_time": "2025-08-15T07:20:49.063247Z",
+     "start_time": "2025-08-15T07:20:48.910375Z"
     }
    },
    "source": [
@@ -130,18 +130,18 @@
        "</div>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T02:45:47.618663Z",
-     "start_time": "2025-08-15T02:45:47.563320Z"
+     "end_time": "2025-08-15T07:20:50.772776Z",
+     "start_time": "2025-08-15T07:20:49.748722Z"
     }
    },
    "cell_type": "code",
@@ -280,18 +280,18 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T02:50:27.374191Z",
-     "start_time": "2025-08-15T02:50:27.363233Z"
+     "end_time": "2025-08-15T07:20:51.154523Z",
+     "start_time": "2025-08-15T07:20:50.881783Z"
     }
    },
    "cell_type": "code",
@@ -400,18 +400,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T02:50:28.134697Z",
-     "start_time": "2025-08-15T02:50:28.124692Z"
+     "end_time": "2025-08-15T07:20:52.058656Z",
+     "start_time": "2025-08-15T07:20:52.021468Z"
     }
    },
    "cell_type": "code",
@@ -487,12 +487,174 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-15T07:20:53.512318Z",
+     "start_time": "2025-08-15T07:20:53.503759Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#get the height of Messi and Ronaldo\n",
+    "df.loc[['L. Messi','Cristiano Ronaldo'],'height_cm']"
+   ],
+   "id": "b9d8f895a878f51e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "short_name\n",
+       "L. Messi             170\n",
+       "Cristiano Ronaldo    187\n",
+       "Name: height_cm, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-15T07:21:13.994948Z",
+     "start_time": "2025-08-15T07:21:13.988519Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#get the height and weight of Messi\n",
+    "df.loc['L. Messi',['weight_kg','height_cm']]"
+   ],
+   "id": "d0f20668fdf32185",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "weight_kg     72\n",
+       "height_cm    170\n",
+       "Name: L. Messi, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-15T07:22:27.212989Z",
+     "start_time": "2025-08-15T07:22:27.205503Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#get the height of messi and ronaldo\n",
+    "df.loc[['L. Messi','Cristiano Ronaldo'],'height_cm']"
+   ],
+   "id": "76b950dded9b2720",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "short_name\n",
+       "L. Messi             170\n",
+       "Cristiano Ronaldo    187\n",
+       "Name: height_cm, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-15T07:21:15.434843Z",
+     "start_time": "2025-08-15T07:21:15.423868Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#get the height and weight of Messi and Ronaldo\n",
+    "df.loc[['L. Messi','Cristiano Ronaldo'],['height_cm','weight_kg']]"
+   ],
+   "id": "1adcfd737ff4e414",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                   height_cm  weight_kg\n",
+       "short_name                             \n",
+       "L. Messi                 170         72\n",
+       "Cristiano Ronaldo        187         83"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height_cm</th>\n",
+       "      <th>weight_kg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>short_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>L. Messi</th>\n",
+       "      <td>170</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cristiano Ronaldo</th>\n",
+       "      <td>187</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -500,7 +662,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "b9d8f895a878f51e"
+   "id": "d0972968165a6efc"
   }
  ],
  "metadata": {
